# toolbase

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MILESTONE_3_WOW_FACTOR.md  MILESTONE_4_TIP_PIPELINE.md  README.md  SECURITY.md  TIP_GUIDE.md  eslint.config.mjs  fix_imports_v2.cjs  index.html  netlify.toml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  testData.json  tsc_output.txt  tsc_output_2.txt  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_tool.md
.github/workflows/: ci.yml  deploy.yml
components/: FooterLink.tsx  Header.tsx  ToolCard.tsx  ToolGrid.tsx
docs/: GOVERNANCE.md  README.md
docs/architecture/: ARCHITECTURE.md  PACKAGE-STRUCTURE-ANALYSIS.md  RUST-WASM-IN-TOOLBASE.md  migration-plan.md
docs/engineering/: ADDING-A-NEW-TOOL.md  CI-QUALITY-GATES.md  CODEBASE-MAP.md  DEVELOPMENT.md  HOW-TO-PYTHON.md  HOW-TO-RUST.md  PYTHON-PYODIDE.md  webgpu-architecture.md
docs/operations/: DEPLOYMENT.md  INCIDENT-RESPONSE.md  (+2 more)
infra/: main.tf  outputs.tf  variables.tf
public/: _headers  manifest.json  robots.txt  sw.js
rust/: Cargo.toml
rust/archive-kit/: Cargo.toml
rust/archive-kit/src/: lib.rs
scripts/: build-python-bundle.ts  build-python-bundler.mjs  build-python-bundler.ts  build-wasm.mjs  check-wasm-artifacts.mjs  fix-imports.mjs  generate-dataset.cjs  generate-pwa-icons.mjs  internalize-imports.mjs  setup-bg-remover.js  setup-bg-remover.py  test-serializer.ts  test-serializer.tsx  tip-browser-test.js  tip-smoke-test.ts
(+847 files in other folders)
