[package]
name = "archive-kit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
